--- a/README.mkd
+++ b/README.mkd
@@ -3,5 +3,7 @@
  * Important metadata tags I always forget
  * YUI CSS from Yahoo's CDN: reset, fonts and base. I don't use grids. [YUI Builder](http://developer.yahoo.com/yui/articles/hosting/?base&fonts&reset&MIN)
  * jQuery and UI from [Google's CDN](http://code.google.com/apis/ajaxlibs/documentation/index.html#jquery)
+ * Useful jquery plugins
+
 
 
